# Trees

./: CMakeLists.txt  README.md  form.ui  main.cpp
Trees/: Tree.h  avl.cpp  avl.h  bst.cpp  bst.h  rbst.cpp  rbst.h  rbt.cpp  rbt.h  syncedtrees.cpp  syncedtrees.h
UIstuff/: mw.cpp  mw.h
